# hiva-ijca-mitr

./: README.md  pyproject.toml  run_eval.sh  run_squad.sh
finetune/: run_squad.sh
finetune/evaluation/: get_log.py  squadv2_eval.py
mitr_versions/: normal.py  original-modeling_distilbert.py  robust mean.py  sa+ffn qa.py
transformers/examples/legacy/question-answering/: run_squad_finetuning.py
transformers/src/transformers/: modeling_outputs.py
transformers/src/transformers/models/distilbert/: club.py  modeling_distilbert.py  modeling_distilbert_mitr.py
